--- a/styles/reusable.css
+++ b/styles/reusable.css
@@ -1,3 +1,72 @@
 .c-red {
   color: var(--red);
 }
+
+.c-blue {
+  color: var(--blue);
+}
+
+.gap-1 { gap: 1rem; }
+.gap-2 { gap: 2rem; }
+.gap-3 { gap: 3rem; }
+.gap-4 { gap: 4rem; }
+.gap-5 { gap: 5rem; }
+.gap-6 { gap: 6rem; }
+.gap-7 { gap: 7rem; }
+.gap-8 { gap: 8rem; }
+
+.mb-1 { margin-bottom: 1rem; }
+.mb-2 { margin-bottom: 2rem; }
+.mb-3 { margin-bottom: 3rem; }
+.mb-4 { margin-bottom: 4rem; }
+.mb-5 { margin-bottom: 5rem; }
+.mb-6 { margin-bottom: 6rem; }
+.mb-7 { margin-bottom: 7rem; }
+.mb-8 { margin-bottom: 8rem; }
+
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.absolute-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* 40px */
+.font-size-40 {
+  font-size: 2.5rem;
+}
+
+.font-weight-500 {
+  font-weight: 500;
+}
+
+/* Styped elemets */
+.button {
+  border: none;
+  font-size: 1.25rem; /* 20px */
+  padding: 1rem 4rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  border-radius: 10rem;
+}
+
+.button-blue {
+  background-color: var(--blue);
+  color: white;
+}
