--- a/styles/reusable.css
+++ b/styles/reusable.css
@@ -64,6 +64,16 @@
   font-weight: 500;
   text-transform: uppercase;
   border-radius: 10rem;
+  transition: .1s;
+}
+
+.button:hover {
+  cursor: pointer;
+  letter-spacing: 0.05rem;
+}
+
+.button:active {
+  transform: scale(0.98);
 }
 
 .button-blue {
