--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,27 @@
 html {
   font-family: Helvetica Neue, Arial, sans-serif;
-  font-size: calc(0.5rem + 0.5vw);
+  font-size: calc(8px + 0.5vw);
 }
 
 body {
   margin: 0;
+}
+
+/* Media */
+@media (max-width: 1200px) {
+
+}
+
+@media (max-width: 1000px) {
+  html {
+    font-size: calc(8px + 0.3vw);
+  }
+}
+
+@media (max-width: 800px) {
+  html {
+    font-size: calc(6px + 0.2vw);
+  }
 }
 
 /* Section 1 | Hero section */
@@ -46,8 +63,9 @@ body {
 #hero-section .content {
   width: 80%;
   text-align: center;
+  text-transform: uppercase;
 }
 
 #hero-section .content .logo {
-  width: 20%;
+  max-width: 20%;
 }
