--- a/styles/reusable.css
+++ b/styles/reusable.css
@@ -24,9 +24,34 @@
 .mb-7 { margin-bottom: 7rem; }
 .mb-8 { margin-bottom: 8rem; }
 
+.mv-1 { margin-top: 1rem; margin-bottom: 1rem; }
+.mv-2 { margin-top: 2rem; margin-bottom: 2rem; }
+.mv-3 { margin-top: 3rem; margin-bottom: 3rem; }
+.mv-4 { margin-top: 4rem; margin-bottom: 4rem; }
+
+.p-1 { padding: 1rem; }
+.p-2 { padding: 2rem; }
+.p-3 { padding: 3rem; }
+.p-4 { padding: 4rem; }
+
+.ph-1 { padding-left: 1rem; padding-right: 1rem; }
+.ph-2 { padding-left: 2rem; padding-right: 2rem; }
+.ph-3 { padding-left: 3rem; padding-right: 3rem; }
+.ph-4 { padding-left: 4rem; padding-right: 4rem; }
+
+.pv-1 { padding-top: 1rem; padding-bottom: 1rem; }
+.pv-2 { padding-top: 2rem; padding-bottom: 2rem; }
+.pv-3 { padding-top: 3rem; padding-bottom: 3rem; }
+.pv-4 { padding-top: 4rem; padding-bottom: 4rem; }
+
 .d-flex {
   display: flex;
 }
+
+.flex-1 { flex: 1; }
+.flex-2 { flex: 2; }
+.flex-3 { flex: 3; }
+.flex-4 { flex: 4; }
 
 .flex-column {
   flex-direction: column;
@@ -45,6 +70,10 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.text-center {
+  text-align: center;
 }
 
 /* 40px */
