--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,17 @@ body {
   margin: 0;
 }
 
-/* Media */
+figure {
+  margin: 0;
+}
+
+/*
+Media breakpoints:
+  1200px
+  1000px
+  800px
+*/
+
 @media (max-width: 1200px) {
 
 }
@@ -68,4 +78,38 @@ body {
 
 #hero-section .content .logo {
   max-width: 20%;
+}
+
+
+
+/* Section 2 */
+#section-2 {
+  display: flex;
+  padding: 1rem;
+  flex-direction: column;
+}
+
+#section-2 .content {
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#section-2 .content figure {
+  gap: 2rem;
+  padding: 1rem;
+  display: flex;
+  min-width: 12rem;
+  font-size: 1.5rem; /* 24px */
+  align-items: center;
+  flex-direction: column;
+}
+
+#section-2 .content figure img {
+  width: 8rem;
+}
+
+#section-2 .content figure:hover {
+  transition: background-color .1s;
+  background-color: #f5f5f5;
 }
