--- a/styles/reusable.css
+++ b/styles/reusable.css
@@ -109,3 +109,9 @@
   background-color: var(--blue);
   color: white;
 }
+
+.button-red {
+  color: var(--red);
+  border: 1px solid var(--blue);
+  background: transparent;
+}
