--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-family: Helvetica Neue, Arial, sans-serif;
   font-size: calc(8px + 0.5vw);
@@ -16,6 +20,7 @@ Media breakpoints:
   1200px
   1000px
   800px
+  600px
 */
 
 @media (max-width: 1200px) {
@@ -36,7 +41,7 @@ Media breakpoints:
 
 /* Section 1 | Hero section */
 #hero-section {
-  background: url('../assets/hero-section/bg.jpg') no-repeat top center/calc(100% - 2rem);
+  background: url('../assets/hero-section/bg.webp') no-repeat top center/calc(100% - 2rem);
   aspect-ratio: 1400/658;
   position: relative;
   display: flex;
@@ -112,4 +117,56 @@ Media breakpoints:
 #section-2 .content figure:hover {
   transition: background-color .1s;
   background-color: #f5f5f5;
+}
+
+
+
+/* Section 3 */
+#section-3 {
+  display: flex;
+  padding: 1rem;
+  position: relative;
+  min-height: fit-content;
+  aspect-ratio: 1429/644;
+  justify-content: flex-end;
+}
+
+/* Use this because the figma is not provided it properly */
+#section-3:before {
+  top: 0;
+  left: 0;
+  mask: url('../assets/section-3/bg-mask.svg') no-repeat center right, linear-gradient(#000 0 0); /* Invert mask */
+  width: 100%;
+  height: 100%;
+  content: '';
+  z-index: -1;
+  position: absolute;
+  mask-size: contain;
+  background: url('../assets/section-3/bg.webp') no-repeat center center/cover;
+  mask-composite: exclude;
+}
+
+#section-3 .content {
+  padding-right: 7%;
+  max-width: 35rem;
+}
+
+#section-3 .content p {
+  line-height: 1.5;
+}
+
+@media (max-width: 600px) {
+  #section-3 {
+    padding: 1rem 3rem;
+    aspect-ratio: unset;
+  }
+
+  #section-3 .content {
+    max-width: unset;
+    padding-right: 0;
+  }
+
+  #section-3 .button-red {
+    background: rgba(255, 255, 255, 0.4);
+  }
 }
